# vbaProject-Compiler

./: README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: python-package.yml
docs/: classes.uml
src/vba_project_compiler/: __init__.py  ole_file.py
src/vbaproject_compiler/: __main__.py  main.py  vbaProject.py
tests/: conftest.py  testProjectObject.py  test_compressor.py  test_compressor.pyt  test_datetime.py  test_datetime.pyt  test_decompressor.py  test_dirObject.py  test_directory.py  test_directory.pyt  test_fatChain.py  test_fatChain.pyt  test_fatSectors.py  test_fileIO.py  test_fileIo.py  test_fileIo.pyt  test_fullFile.py  test_fullFile.pyt  test_project.py  test_storageDirectory.py  test_storageDirectory.pyt  test_vbaProjectCompiler.py
tests/FileIO/: test_fatChain.py  test_miniChain.py  test_minichain.py
tests/Functional/: create_cache.py  test_dirObject.py  test_fullFile.py  test_fullFile.pyt  test_helper.py  test_iDrupalEntity_cache.pyt
tests/Helpers/: test_compressor.py  test_decompressor.py
tests/Views/: test_project.py  test_projectWm.py  test_vba_project  test_vba_project.py
tests/blank/: HexDump.txt  PROJECT  Root.txt  Sheet1  ThisWorkbook  dir  header.txt  project.uml  sector00.txt  sector01.txt  sector02.txt  sector03.txt  sector04.txt  sector05.txt  sector06.txt  sector07.txt  sector08.txt  vbaProject.bin.txt
tests/drupal/: directory.bin.txt  (+2 more)
vbaProjectCompiler/: Decompressor.py  Directory.py  decompressor.py  directory.py  main.py  oleFile.py  ole_file.py  project.py  vbaProject.py
(+69 files in other folders)
