[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vbaproject_compiler"
version = "0.0.1"
authors = [
  { name="Kevin Nowaczyk", email="beakerboy99@yahoo.com" },
]
description = "Create a vbaProject.bin file from VBA source files."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'ms_ovba_compression',
    'ms_ovba_crypto'
]
[project.optional-dependencies]
tests = [
  'pytest',
  'pytest-cov',
  'pytest-mock',
  'coveralls',
  'pep8-naming',
  'flake8-annotations'
]
[project.urls]
"Homepage" = "https://github.com/Beakerboy/vbaProject-Compiler"
"Bug Tracker" = "https://github.com/Beakerboy/vbaProject-Compiler/issues"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]
